@@ -15,6 +15,7 @@ Version 1.9.1+svn:
    * Updated translations: Chinese (Traditional), Indonesian, Japanese, Russian
  * User interface:
    * Fixed: Addon dialog in title screen shows last host again.
+   * Fixed: Fullscreen hotkey works again in the title screen.
 
 Version 1.9.1:
  * AI:
